[metadata]
name = bztools
version = 0.0.1
description = Custom purpose tool for cloning bugzilla tickets
license_file = LICENSE
author = Ronnie Lazar
url = https://github.com/ronniel1/bztools

[options]
install_requires =
    python-bugzilla
    jira
packages = bztools

[options.entry_points]
console_scripts =
    bzclone = bztools.bzclone:run
    e2eautoverify = bztools.e2eautoverify:run
    
[pylint.messages control]
disable=invalid-name,
        bare-except

[flake8]
max-line-length=88
select = C,E,F,W,B,B950
extend-ignore = E203, E501

[isort]
line_length=88
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True

[bdist_wheel]
universal = 1
